--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests"
   },
   "dependencies": {
     "bignumber.js": "^4.0.2",
@@ -28,6 +28,7 @@
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.2.0",
     "web3": "^0.20.6",
+    "winston": "^3.0.0",
     "ws": "^5.1.0"
   },
   "author": "zhanglihua-wanglu",
