--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests"
+    "test": "mocha --timeout 100000 tests"
   },
   "dependencies": {
     "bignumber.js": "^4.0.2",
+    "bitcoin-core": "^2.0.0",
+    "bitcoinjs-lib": "^4.0.1",
     "bluebird": "^3.5.1",
+    "chai": "^4.1.2",
     "crypt": "0.0.2",
     "ethereumjs-tx": "^1.3.6",
     "ethereumjs-util": "^5.1.2",
