--- a/package.json
+++ b/package.json
@@ -17,17 +17,23 @@
     "crypt": "0.0.2",
     "ethereumjs-tx": "^1.3.6",
     "ethereumjs-util": "^5.1.2",
+    "fisher-yates": "^1.0.3",
     "keccak": "^1.4.0",
     "keccakjs": "^0.2.1",
     "keythereum": "^1.0.2",
-    "log4js": "^2.5.3",
+    "lodash": "^4.5.1",
+    "log4js": "^3.0.5",
     "lokijs": "^1.5.1",
     "net": "^1.0.2",
+    "nyc": "^13.0.1",
     "promisefy-util": "^1.2.0",
+    "ripemd160": "^2.0.2",
     "scryptsy": "^2.0.0",
     "secp256k1": "^3.4.0",
     "solc": "^0.4.16",
     "sprintf-js": "^1.1.1",
+    "standard": "*",
+    "tape": "^4.5.1",
     "util": "^0.11.0",
     "uuid": "^3.1.0",
     "wanchain-keystore": "^0.0.1",
