--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bitcoinjs-lib": "^4.0.1",
     "bitcore-mnemonic": "^1.5.0",
     "bluebird": "^3.5.1",
+    "bs58check": "^2.1.2",
     "chai": "^4.1.2",
     "crypt": "0.0.2",
     "ethereumjs-tx": "^1.3.6",
