--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bignumber.js": "^4.0.2",
+    "bip38": "^2.0.2",
     "bip65": "^1.0.3",
     "bitcoin-core": "^2.0.0",
     "bitcoinjs-lib": "^4.0.1",
@@ -33,6 +34,7 @@
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.2.0",
     "web3": "^0.20.6",
+    "wif": "^2.0.6",
     "winston": "^3.0.0",
     "ws": "^5.1.0"
   },
