--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sprintf-js": "^1.1.1",
     "standard": "*",
     "tape": "^4.5.1",
+    "underscore": "^1.9.1",
     "util": "^0.11.0",
     "uuid": "^3.1.0",
     "wanchain-keystore": "^0.0.1",
