--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.5.1",
     "bs58check": "^2.1.2",
     "chai": "^4.1.2",
+    "coinselect": "^3.1.11",
     "crypt": "0.0.2",
     "ethereumjs-tx": "^1.3.6",
     "ethereumjs-util": "^5.1.2",
@@ -44,8 +45,7 @@
     "web3": "^0.20.6",
     "wif": "^2.0.6",
     "winston": "^3.0.0",
-    "ws": "^5.1.0",
-    "coinselect": "*"
+    "ws": "^5.1.0"
   },
   "author": "zhanglihua-wanglu",
   "license": "MIT"
