--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "bs58": "*",
     "sha256":"*",
     "crypto-hashing":"*",
-	"btc-address": "^0.4.0",
+	"btc-address": "^0.4.0"
   },
   "author": "zhanglihua-wanglu",
   "license": "MIT"
