update unittest and doc

--- a/package.json
+++ b/package.json
@@ -4,28 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 100000 tests"
+    "test": "mocha --globals '*' --timeout 0 tests/",
+    "apiDoc": "./node_modules/.bin/jsdoc ./ -r  -c ./docConf.json -t ./node_modules/ink-docstrap/template -d ./doc"
   },
   "dependencies": {
     "bignumber.js": "^4.0.2",
+    "binstring": "^0.2.1",
     "bip38": "^2.0.2",
     "bip65": "^1.0.3",
     "bitcoin-core": "^2.0.0",
     "bitcoinjs-lib": "^4.0.1",
     "bitcore-mnemonic": "^1.5.0",
     "bluebird": "^3.5.1",
+    "bs58": "^4.0.1",
     "bs58check": "^2.1.2",
+    "btc-address": "^0.4.0",
     "chai": "^4.1.2",
     "coinselect": "^3.1.11",
     "crypt": "0.0.2",
+    "crypto-hashing": "^1.0.0",
     "ethereumjs-tx": "^1.3.6",
     "ethereumjs-util": "^5.1.2",
     "fisher-yates": "^1.0.3",
+    "ink-docstrap": "^1.3.2",
+    "jsdoc": "^3.5.5",
+    "jsdoc-export-default-interop": "^0.3.1",
     "keccak": "^1.4.0",
     "keccakjs": "^0.2.1",
     "keythereum": "^1.0.2",
-    "lodash": "^4.5.1",
-    "log4js": "^3.0.5",
     "lokijs": "^1.5.1",
     "net": "^1.0.2",
     "nyc": "^13.0.1",
@@ -33,6 +39,7 @@
     "ripemd160": "^2.0.2",
     "scryptsy": "^2.0.0",
     "secp256k1": "^3.4.0",
+    "sha256": "^0.2.0",
     "solc": "^0.4.16",
     "sprintf-js": "^1.1.1",
     "standard": "*",
@@ -45,12 +52,7 @@
     "web3": "^0.20.6",
     "wif": "^2.0.6",
     "winston": "^3.0.0",
-    "ws": "^6.0.0",
-    "binstring": "*",
-    "bs58": "*",
-    "sha256": "*",
-    "crypto-hashing": "*",
-    "btc-address": "^0.4.0"
+    "ws": "^6.0.0"
   },
   "author": "zhanglihua-wanglu",
   "license": "MIT"
