--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --globals '*' --timeout 0 tests/",
+    "test": "mocha --globals '*'  --require mocha-steps --timeout 0 tests/",
     "apiDoc": "./node_modules/.bin/jsdoc ./ -r  -c ./docConf.json -t ./node_modules/ink-docstrap/template -d ./docs"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "keccakjs": "^0.2.1",
     "keythereum": "^1.0.2",
     "lokijs": "^1.5.1",
+    "mocha-steps": "^1.1.0",
     "net": "^1.0.2",
     "nyc": "^13.0.1",
     "promisefy-util": "^1.2.0",
